# sage

./: .gitignore  Application.cpp  Application.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  EventManager.hpp  GUI.cpp  GUI.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ObjParser.cpp  ObjParser.hpp  Rasterizer.cpp  Rasterizer.hpp  Renderable.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  SceneData.hpp  TODO.md  ZBuffer.hpp  constants.hpp  main.cpp  slib.cpp  slib.hpp  utils.hpp
editor/: BoxColliderGizmo.cpp  BoxColliderGizmo.hpp  CMakeLists.txt  EditGizmo.cpp  EditGizmo.hpp  EditorApplication.cpp  EditorApplication.hpp  EditorAssetCatalog.cpp  EditorAssetCatalog.hpp  EditorAssetRename.cpp  EditorAssetRename.hpp  EditorComponents.hpp  EditorDockLayout.hpp  EditorEntityOperations.cpp  EditorEntityOperations.hpp  EditorFlatpack.cpp  EditorFlatpackEditSession.cpp  EditorFlatpackEditSession.hpp  EditorFocus.cpp  EditorFocus.hpp  EditorGui.cpp  EditorGui.hpp  EditorGuiAssetDrawer.cpp  EditorGuiHierarchy.cpp  EditorGuiInternal.hpp  EditorHierarchyTree.cpp  EditorHierarchyTree.hpp  EditorHistory.cpp  EditorHistory.hpp  EditorInspector.cpp  EditorInspector.hpp  EditorMapController.cpp  EditorMapController.hpp  EditorMapLoader.cpp  EditorMapLoader.hpp  EditorModeStateMachine.cpp  EditorModeStateMachine.hpp  EditorPickingService.cpp  EditorPlacementController.cpp  EditorPlacementController.hpp  (+10 more)
engine/: AnimationId.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  CollisionLayers.hpp  CollisionMatrix.cpp  CollisionMatrix.hpp  Cursor.cpp  Cursor.hpp  CursorClickIndicator.cpp  CursorClickIndicator.hpp  CursorTypes.hpp  EditorLayoutMapFormat.hpp  EngineSystems.cpp  EngineSystems.hpp  GameUiEngine.hpp  IGameRuntime.cpp  IGameRuntime.hpp  Light.hpp  MousePicker.cpp  MousePicker.hpp  Picker.cpp  Picker.hpp  ResourceManager.cpp  ResourceManager.hpp  SceneTags.hpp  Serializer.cpp  Serializer.hpp  Settings.hpp  TerrainMesh.cpp  TerrainMesh.hpp  TextureTerrainOverlay.cpp  TextureTerrainOverlay.hpp  UserInput.cpp  UserInput.hpp  ViewSerializer.hpp  engine_config.hpp  raylib-cereal.hpp  slib.cpp  slib.hpp
engine/components/: Animation.cpp  Animation.hpp  BaseStateComponent.hpp  Collideable.cpp  Collideable.hpp  CollisionIntent.hpp  DoorBehaviorComponent.hpp  DynamicRenderable.cpp  DynamicRenderable.hpp  MoveableActor.hpp  NavigationGridSquare.hpp  Renderable.cpp  Renderable.hpp  ScriptComponent.hpp  Spawner.hpp  Terrain.cpp  Terrain.hpp  TriggerVolume.hpp  sgTransform.cpp  sgTransform.hpp
engine/defaults/project/: CustomCursors.hpp  CustomSceneTags.hpp
engine/systems/: ActorMovementSystem.cpp  ActorMovementSystem.hpp  AnimationSystem.cpp  CollisionSystem.cpp  CollisionSystem.hpp  ControllableActorSystem.cpp  ControllableActorSystem.hpp  DoorSystem.cpp  NavigationGridSystem.cpp  NavigationGridSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  ScriptSystem.cpp  ScriptSystem.hpp  TransformSystem.cpp  TransformSystem.hpp  UberShaderSystem.cpp
engine/systems/states/: StateMachine.hpp  StateMachineBase.hpp
engine/ui/: GameUIEngine.cpp  GameUIEngine.hpp  UIBase.cpp  UIBase.hpp  UIBuilder.cpp  UIBuilder.hpp  UIElements.cpp  UIElements.hpp  UILayout.cpp  UILayout.hpp  UIState.cpp  UIState.hpp  UITheme.hpp  UIWindow.cpp  UIWindow.hpp
